Fix scrollbar flickering when opening and closing menu (#1377)

--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -18,4 +18,8 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
+
+  html body[data-scroll-locked][data-scroll-locked] {
+    overflow: auto !important;
+  }
 }
